dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basic-auth
  namespace: kubernetes-dashboard
spec:
  basicAuth:
    secret: dashboard-basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-ip-allow
  namespace: kubernetes-dashboard
spec:
  ipAllowList:
    sourceRange:
      - "subnet/24"
      - "lb/32"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k8s.homelab.local`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
          scheme: http 
      middlewares:
        - name: dashboard-basic-auth
        - name: dashboard-ip-allow
